--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
-  <header><img src="image/logo.svg" alt="">
+  <header><img src="images/logo.svg" alt="">
 
   <h1>The Solar System</header>
 </body>
