--- a/index.html
+++ b/index.html
@@ -9,5 +9,19 @@
   <header><img src="images/logo.svg" alt="">
 
   <h1>The Solar System</header>
+
+  <nav>
+    <ul>
+      <li><a href="#">Stars</a></li>
+      <li><a href="#">Terrestrail planets</a></li>
+      <li><a href="#">Gas giants</a></li>
+      <li><a href="#">Dwarf planets</a></li>
+      <li><a href="#">Asteroids</a></li>
+      <li><a href="#">Comets</a></li>
+      </ul>
+      </nav>
+
+    <main>
+
 </body>
 </html>
