--- a/index.html
+++ b/index.html
@@ -8,20 +8,23 @@
 <body>
   <header><img src="images/logo.svg" alt="">
 
-  <h1>The Solar System</header>
+    <h1>The Solar System</header>
 
-  <nav>
-    <ul>
-      <li><a href="#">Stars</a></li>
-      <li><a href="#">Terrestrail planets</a></li>
-      <li><a href="#">Gas giants</a></li>
-      <li><a href="#">Dwarf planets</a></li>
-      <li><a href="#">Asteroids</a></li>
-      <li><a href="#">Comets</a></li>
-      </ul>
+      <nav>
+        <ul>
+          <li><a href="#">Stars</a></li>
+          <li><a href="#">Terrestrail planets</a></li>
+          <li><a href="#">Gas giants</a></li>
+          <li><a href="#">Dwarf planets</a></li>
+          <li><a href="#">Asteroids</a></li>
+          <li><a href="#">Comets</a></li>
+        </ul>
       </nav>
 
-    <main>
+      <main>
+        <figure><img src="images/banner.svg" alt="">
+          <figcaption>The Solar System-our home in the stars</figcaption>
+          </figure>
 
-</body>
-</html>
+      </body>
+      </html>
