--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
       <main>
         <figure><img src="images/banner.svg" alt="">
           <figcaption>The Solar System-our home in the stars</figcaption>
-          </figure>
+        </figure>
+      </main>
 
-      </body>
-      </html>
+      <footer>
+        <p>The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.</p>
+      </footer>
+
+    </body>
+    </html>
