--- a/index.html
+++ b/index.html
@@ -8,28 +8,28 @@
 <body>
   <header><img src="images/logo.svg" alt="">
 
-    <h1>The Solar System</header>
+    <h1>The Solar System</h1>
 
-      <nav>
-        <ul>
-          <li><a href="#">Stars</a></li>
-          <li><a href="#">Terrestrail planets</a></li>
-          <li><a href="#">Gas giants</a></li>
-          <li><a href="#">Dwarf planets</a></li>
-          <li><a href="#">Asteroids</a></li>
-          <li><a href="#">Comets</a></li>
-        </ul>
-      </nav>
+    <nav>
+      <ul>
+        <li><a href="#">Stars</a></li>
+        <li><a href="#">Terrestrial planets</a></li>
+        <li><a href="#">Gas giants</a></li>
+        <li><a href="#">Dwarf planets</a></li>
+        <li><a href="#">Asteroids</a></li>
+        <li><a href="#">Comets</a></li>
+      </ul>
+    </nav>
+  </header>
 
-      <main>
-        <figure><img src="images/banner.svg" alt="">
-          <figcaption>The Solar System-our home in the stars</figcaption>
-        </figure>
-      </main>
+  <main>
+    <figure>
+      <img src="images/banner.svg" alt="">
+      <figcaption>The Solar System-our home in the stars</figcaption>
+    </figure>
 
-      <footer>
-        <p>The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.</p>
-      </footer>
+    <p>The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.</p>
+  </main>
 
-    </body>
-    </html>
+</body>
+</html>
